--- a/test/docker-compose.unit-tests.yml
+++ b/test/docker-compose.unit-tests.yml
@@ -12,7 +12,6 @@ services:
     image: grapl/rust-test-unit:${TAG:-latest}
     build:
       context: ${PWD}/src/rust
-      dockerfile: Dockerfile.Makefile
       target: build-test-unit
       args:
         - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
@@ -27,21 +26,21 @@ services:
     image: grapl/grapl-graph-descriptions-test:${TAG:-latest}
     build:
       context: ${PWD}/src
-      dockerfile: ./python/Dockerfile.Makefile
+      dockerfile: ./python/Dockerfile
       target: graph-descriptions-test
 
   grapl-common-test:
     image: grapl/grapl-grapl-common-test:${TAG:-latest}
     build:
       context: ${PWD}/src
-      dockerfile: ./python/Dockerfile.Makefile
+      dockerfile: ./python/Dockerfile
       target: grapl-common-test
 
   grapl-analyzerlib-test:
     image: grapl/grapl-analyzerlib-test:${TAG:-latest}
     build:
       context: ${PWD}/src
-      dockerfile: ./python/Dockerfile.Makefile
+      dockerfile: ./python/Dockerfile
       target: grapl-analyzerlib-test
 
   # grapl-analyzer-deployer:
@@ -51,35 +50,35 @@ services:
     image: grapl/grapl-analyzer-executor-test:${TAG:-latest}
     build:
       context: ${PWD}/src
-      dockerfile: ./python/Dockerfile.Makefile
+      dockerfile: ./python/Dockerfile
       target: analyzer-executor-test
 
   grapl-engagement-creator-test:
     image: grapl/grapl-engagement-creator-test:${TAG:-latest}
     build:
       context: ${PWD}/src
-      dockerfile: ./python/Dockerfile.Makefile
+      dockerfile: ./python/Dockerfile
       target: engagement-creator-test
 
   grapl-engagement-edge-test:
     image: grapl/grapl-engagement-edge-test:${TAG:-latest}
     build:
       context: ${PWD}/src
-      dockerfile: ./python/Dockerfile.Makefile
+      dockerfile: ./python/Dockerfile
       target: engagement-edge-test
 
   grapl-model-plugin-deployer-test:
     image: grapl/grapl-model-plugin-deployer-test:${TAG:-latest}
     build:
       context: ${PWD}/src
-      dockerfile: ./python/Dockerfile.Makefile
+      dockerfile: ./python/Dockerfile
       target: model-plugin-deployer-test
 
   grapl-dgraph-ttl-test:
     image: grapl/grapl-dgraph-ttl-test:${TAG:-latest}
     build:
       context: ${PWD}/src
-      dockerfile: ./python/Dockerfile.Makefile
+      dockerfile: ./python/Dockerfile
       target: dgraph-ttl-test
 
   #
@@ -90,7 +89,7 @@ services:
     image: grapl/grapl-engagement-view-build:${TAG:-latest}
     build: 
       context: ${PWD}/src/js/engagement_view
-      dockerfile: Dockerfile.Makefile
+      dockerfile: Dockerfile
       target: engagement-view-test
 
   grapl-cdk-test:
@@ -107,7 +106,7 @@ services:
     image: grapl/grapl-notebook-test:${TAG:-latest}
     build: 
       context: ${PWD}/src
-      dockerfile: ./python/Dockerfile.Makefile
+      dockerfile: ./python/Dockerfile
       target: grapl-notebook-test
     volumes:
       - ${PWD}/etc:/grapl-etc:ro
