--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,7 +105,7 @@ services:
       context: src/rust
       target: metric-forwarder-deploy
       args:
-        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER:-}
         - PROFILE=${PROFILE:-debug}
     tty: false
     environment:
@@ -121,7 +121,7 @@ services:
       context: src/rust
       target: sysmon-subgraph-generator-deploy
       args:
-        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER:-}
         - PROFILE=${PROFILE:-debug}
     tty: false
     environment:
@@ -148,7 +148,7 @@ services:
       context: src/rust
       target: osquery-subgraph-generator-deploy
       args:
-        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER:-}
         - PROFILE=${PROFILE:-debug}
     tty: false
     environment:
@@ -175,7 +175,7 @@ services:
       context: src/rust
       target: node-identifier-deploy
       args:
-        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER:-}
         - PROFILE=${PROFILE:-debug}
     environment:
       - "BUCKET_PREFIX=local-grapl"
@@ -214,7 +214,7 @@ services:
       context: src/rust
       target: node-identifier-retry-handler-deploy
       args:
-        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER:-}
         - PROFILE=${PROFILE:-debug}
     environment:
       - "BUCKET_PREFIX=local-grapl"
@@ -253,7 +253,7 @@ services:
       context: src/rust
       target: graph-merger-deploy
       args:
-        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER:-}
         - PROFILE=${PROFILE:-debug}
     environment:
       - "BUCKET_PREFIX=local-grapl"
@@ -285,7 +285,7 @@ services:
       context: src/rust
       target: analyzer-dispatcher-deploy
       args:
-        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER:-}
         - PROFILE=${PROFILE:-debug}
     environment:
       - "BUCKET_PREFIX=local-grapl"
