--- a/test/docker-compose.unit-tests.yml
+++ b/test/docker-compose.unit-tests.yml
@@ -14,7 +14,7 @@ services:
       context: ${PWD}/src/rust
       target: build-test-unit
       args:
-        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER}
+        - GRAPL_RUSTC_WRAPPER=${GRAPL_RUSTC_WRAPPER:-}
         - PROFILE=debug
     command: cargo test
 
