--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Rust unit tests
         run: |
-          SCCACHE_LOCATION=none make test-unit-rust
+          make test-unit-rust
 
   python-unit-tests:
     runs-on: ubuntu-latest
@@ -93,7 +93,7 @@ jobs:
 
       - name: Run integration tests
         run: |
-          SCCACHE_LOCATION=none make test-integration
+          make test-integration
 
 
   # In the future, this should probably be merged back into the integration tests, but
