--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -120,6 +120,8 @@ jobs:
 
       - name: Run end-to-end tests
         run: |
+          GRAPL_LOG_LEVEL=debug \
+          DUMP_ARTIFACTS=True \
           make test-e2e
 
       # NOTE: This requires >= py37
