--- a/test/docker-compose.integration-tests.yml
+++ b/test/docker-compose.integration-tests.yml
@@ -90,6 +90,7 @@ services:
 
   engagement-view-integration-tests:
     image: cypress/included:5.6.0
+    user: node
     working_dir: /test
     command: --browser chrome --headless # enctrypoint is: cypress run
     volumes: 
