--- a/.github/workflows/grapl-lint.yml
+++ b/.github/workflows/grapl-lint.yml
@@ -8,31 +8,21 @@ on:
       - master
 
 jobs:
-  rust-format:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: src/rust
-    steps:
-      - uses: actions/checkout@v2
-      - name: Check Rust code formatting
-        # Github Workflow runners appear to already have rustup, but
-        # using a minimal profile, which runs afoul of the
-        # RUSTUP_TOOLCHAIN variable in bin/format, because `rustfmt`
-        # isn't included in the minimal profile :(
-        run: |
-          rustup set profile default
-          bin/format --check
-
   rust-lint:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: src/rust
+
     steps:
       - uses: actions/checkout@v2
-      - name: Lint Rust Code
-        run: bin/lint
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          components: rustfmt
+
+      - name: Check rust formatting
+        run: |
+          cd src/rust
+          cargo fmt -- --check
 
   python-lint:
     runs-on: ubuntu-latest
