--- a/src/rust/generators/generic-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/generic-subgraph-generator/Cargo.toml
@@ -5,34 +5,46 @@ authors = ["Insanitybit <insanitybit@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-async-trait = "0.1"
-aws_lambda_events = "0.4"
-chrono = "0.4"
-eyre = "0.6"
-failure = "0.1"
-futures = "0.3"
-graph-generator-lib = {path = "../graph-generator-lib/", version="*"}
-grapl-config = {path="../../grapl-config", version="*"}
+#graph-generator-lib = {path = "../graph-generator-lib/", version="*"}
 grapl-graph-descriptions = { path="../../graph-descriptions", version="*"}
-grapl-observe = { path = "../../grapl-observe/" }
-grapl-service = { path = "../../grapl-service/" }
-lambda_runtime = "0.2"
-lazy_static = "1.2.0"
-prost = "0.7"
-regex = "1"
-rusoto_core = { version="0.45.0", default_features = false, features=["rustls"] }
-rusoto_s3 = { version="0.45.0", default_features = false, features=["rustls"] }
-rusoto_sqs = { version="0.45.0", default_features = false, features=["rustls"] }
-simple_logger = "1.6.*"
+grapl-config = {path="../../grapl-config", version="*"}
+
 sqs-executor = { path = "../../sqs-executor/" }
-thiserror = "1.0.23"
-tokio-compat = "0.1.*"
+grapl-service = { path = "../../grapl-service/" }
+grapl-observe = { path = "../../grapl-observe/" }
+serde = "1"
+serde_json = "1"
+serde_derive = "1"
+failure = "0.1"
+prost = "0.7"
+log = "0"
+base16 = "0.1"
+regex = "1"
+lazy_static = "1.2.0"
+
+chrono = "0.4"
+rayon = "1"
+stopwatch = "0"
+
+rusoto_s3 = { version="0.45.0", default_features = false, features=["rustls"] }
+rusoto_core = { version="0.45.0", default_features = false, features=["rustls"] }
+rusoto_sqs = { version="0.45.0", default_features = false, features=["rustls"] }
+
+futures = "0.3.*"
+aws_lambda_events = "0.2.0"
+simple_logger = "1.6.*"
+lambda_runtime = "0.2.*"
+async-trait = "0.1.22"
+zstd = "0.6"
 tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
+
+tokio-compat = "0.1.*"
 tracing = "0.1.15"
 tracing-futures = "0.2.4"
 tracing-subscriber = "0.2"
-version = "*"
-zstd = "0.6"
+eyre = "0.4.3"
+thiserror = "1.0.23"
+#openssl-probe = "0.1.2"
 
 
 [dependencies.uuid]
