--- a/src/rust/generators/generic-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/generic-subgraph-generator/Cargo.toml
@@ -31,6 +31,8 @@ tracing-futures = "0.2.4"
 tracing-subscriber = "0.2"
 eyre = "0.4.3"
 thiserror = "1.0.23"
+serde = "1.0.120"
+serde_json = "1.0.61"
 #openssl-probe = "0.1.2"
 
 
